[package]
name = "danger-write"
version = "0.1.2"
edition = "2024"
description = "A writing app that erases everything you've written if you stop typing"
license = "MIT"
repository = "https://github.com/bobby-sills/danger-write"
readme = "README.md"
keywords = ["tui", "writing", "ratatui", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30.2"
